--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -140,7 +140,7 @@ body {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     top: 0;
     left: 0;
     background-color: #232323;
@@ -181,6 +181,8 @@ body {
     font-size: 30px;
     cursor: pointer;
     display: none;
+    color: #454545;
+    margin: 4px 0 3px 10px;
 }
 
 @media screen and (max-height: 450px) {
