--- a/scss/layout/_content.scss
+++ b/scss/layout/_content.scss
@@ -1,63 +1,3 @@
-        //main styles
-        // .main-wrapper{
-        //  padding: 0 0 0 0;
-        //  min-width: $min-width;
-        //     width: 100%;
-        //  position: relative;
-        //  overflow: hidden;
-        //  min-height:100%;
-        //  display: -webkit-box;
-        //  display: -moz-box;
-        //  display: -ms-flexbox;
-        //  display: -webkit-flex;
-        //  display: flex;
-        //  flex-direction:column;
-        //     -webkit-flex-direction:column;
-        //     -ms-flex-direction: column;
-        //  justify-content:flex-start; 
-        //     -webkit-justify-content:flex-start;  
-        //     -ms-flex-pack: start;
-        // }
-        // .wrapper{
-        //  min-width: $min-width;
-        //  max-width: $max-width;
-        //  padding: 0 40px 0 40px;
-        //  margin: 0 auto;
-        //  position: relative;
-        // }
-        /* titles */
-
-        // p{   
-        //  @include font($base-font-size,$base-line-height,$text-color);
-        //  padding: 15px 0 15px 0;
-        //  font-weight: 400;   
-        // }
-        // h1{  
-        //  @include font($font-size-h1,$line-height-h1,$title-color);
-        //  font-family: $title-font-family;
-        //  padding: 15px 0 15px 0;
-        //  font-weight: 400;   
-        // }
-        // h2{
-        //  @include font($font-size-h2,$line-height-h2,$title-color);
-        //  font-family: $title-font-family;
-        //  padding: 15px 0 15px 0;
-        //  font-weight: 400;   
-        // }
-        // h3{
-        //  @include font($font-size-h3,$line-height-h3,$title-color);
-        //  font-family: $title-font-family;
-        //  padding: 15px 0 15px 0;
-        //  font-weight: 400;
-        // }
-        /* text position */
-
-        // .text-left{text-align: left!important}
-        // .text-center{text-align: center!important}
-        // .text-right{text-align: right!important}
-        // .nowrap{white-space: nowrap!important;}
-        /* loader */
-
         .loaded .main-wrapper {
             visibility: hidden;
         }
@@ -83,16 +23,6 @@
 ================================================================================
 */
 
-        // .content-gl{ 
-        //  min-width: $min-width;
-        //  text-align:left;
-        //     width: 100%;
-        //  order: 2;
-        //     -webkit-order: 2;
-        //  flex-grow: 1;
-        //     -webkit-flex-grow: 1;
-        //  background: #fff000;
-        // }
         @media screen and (max-width: 1200px) {}
 
         @media screen and (min-width: 992px) {}
@@ -445,7 +375,7 @@
             .line {
                 background-color: #b61e24;
                 height: 4px;
-                width: 325px;
+                max-width: 325px;
                 margin: 0 auto;
                 border-radius: 4px;
             }
@@ -676,6 +606,7 @@
                     display: block;
                     position: static;
                     margin: 0 auto;
+                    padding: 20px;
                 }
                 .pointer {
                     display: block;
@@ -692,28 +623,6 @@
                     }
                 }
             }
-        }
-
-        @media screen and (max-width: 789px) {
-            .content-c {
-                .search {
-                    width: 90%;
-                    form {
-                        width: 80%;
-                        button {
-                            img {
-                                margin-left: 5px;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-
-
-
-        * {
-            box-sizing: border-box
         }
 
         .slide {
@@ -810,5 +719,30 @@
             }
             to {
                 opacity: 1
+            }
+        }
+
+
+
+
+
+
+
+        @media screen and (max-width: 789px) {
+            .content-c {
+                .search {
+                    width: 90%;
+                    input {
+                        min-width: 100px;
+                    }
+                    form {
+                        width: 80%;
+                        button {
+                            img {
+                                margin-left: 5px;
+                            }
+                        }
+                    }
+                }
             }
         }
